--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+watershed (5) UNRELEASED; urgency=low
+
+  * libnettle-dev is NBS, move build dependency to nettle-dev.
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 08 Mar 2010 16:34:57 +0100
+
 watershed (4) jaunty; urgency=low
 
   * debian/control: Depend on initramfs-tools so system is not potentially
