--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 watershed (5) UNRELEASED; urgency=low
 
   * libnettle-dev is NBS, move build dependency to nettle-dev.
+  * Bump Standards-Version to 3.8.4 (no changes necessary).
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 08 Mar 2010 16:34:57 +0100
 
