--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+watershed (6) UNRELEASED; urgency=low
+
+  * Pass -l:libnettle.a instead of /usr/lib/libnettle.a in LIB_OBJS; this
+    avoids hardcoding the path which just changed with multiarch; fixes FTBFS.
+
+ -- Loïc Minier <loic.minier@ubuntu.com>  Thu, 01 Dec 2011 00:12:13 +0100
+
 watershed (5) lucid; urgency=low
 
   * libnettle-dev is NBS, move build dependency to nettle-dev.
