--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ watershed (6) UNRELEASED; urgency=low
     package can transport this permission.
   * Move debian/watershed.initramfs-hook to debian/initramfs-hook/watershed
     and install it via dh_install instead of calling install in rules.
+  * Convert package from cdbs to dh using debhelper compat level 9 for
+    dpkg-buildflags support.
 
  -- Loïc Minier <loic.minier@ubuntu.com>  Thu, 01 Dec 2011 00:12:13 +0100
 
