--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+watershed (7) UNRELEASED; urgency=low
+
+  * Use correct compiler when cross-building.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 04 Dec 2012 14:50:22 +0000
+
 watershed (6) precise; urgency=low
 
   * Pass -l:libnettle.a instead of /usr/lib/libnettle.a in LIB_OBJS; this
